tests/transpiler/x/zig/list_nested_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_nested_assign.zig:5:33: error: array literal requires address-of operator (&) to coerce to slice type '[]i64'
    var matrix = [_][]i64{[_]i64{1, 2}, [_]i64{3, 4}};
                          ~~~~~~^~~~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
